# Copyright 2016 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# This file contains variables that can be imported into a repo's dotfile (.gn)
# to make it easier to roll new versions of //build in.

radium_dotfile_settings = {
  exec_script_whitelist = [ "//radium/build/branding.gni" ]
}
