# Copyright 2024 The Radium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

support_locales = [
  "en-US",
  "zh-CN",
]

if (is_apple) {
  # Same as the locales list but in the format Mac expects for output files:
  # it uses underscores instead of hyphens, and "en" instead of "en-US".
  support_locales_as_apple_outputs = []
  foreach(locale, support_locales) {
    if (locale == "en-US") {
      support_locales_as_apple_outputs += [ "en" ]
    } else {
      support_locales_as_apple_outputs += [ string_replace(locale, "-", "_") ]
    }
  }
}
